--- a/HighTable/package.json
+++ b/HighTable/package.json
@@ -7,7 +7,16 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "clear-watch": "watchman watch-del-all && watchman shutdown-server",
+    "ios-bundle-js": "react-native bundle --dev false --entry-file index.ios.js --bundle-output ios/main.jsbundle --platform ios",
+    "ios-build": "react-native run-ios --configuration Release",
+    "android-clean": "cd android && ./gradlew clean",
+    "android-build-debug": "cd android/ && ./gradlew assembleDebug",
+    "android-assemble-release": "cd android && ./gradlew assembleRelease --no-daemon",
+    "android-bundle-release": "cd android && ./gradlew bundleRelease --no-daemon",
+    "android-bundle-js": "react-native bundle --platform android --dev false --entry-file ./index.js --bundle-output ./android/app/src/main/assets/index.bundle --sourcemap-output ./android/app/src/main/assets/index.map --assets-dest ./android/app/src/main/res/",
+    "lint": "eslint . --fix",
+    "prettier": "prettier --write **/*{js,json,ts,tsx}"
   },
   "dependencies": {
     "react": "16.11.0",
@@ -17,13 +26,41 @@
     "@babel/core": "^7.6.2",
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
+    "@types/jest": "^25.2.1",
+    "@types/react": "^16.9.34",
+    "@types/react-native": "^0.62.5",
+    "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^24.9.0",
-    "eslint": "^6.5.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-node": "^4.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "~2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "husky": "^4.2.5",
     "jest": "^24.9.0",
+    "lint-staged": "^10.2.2",
     "metro-react-native-babel-preset": "^0.58.0",
-    "react-test-renderer": "16.11.0"
+    "prettier": "^2.0.5",
+    "react-test-renderer": "16.11.0",
+    "typescript": "^3.8.3"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,js,tsx}": [
+      "yarn prettier",
+      "yarn lint",
+      "git add ."
+    ]
   }
 }
