--- a/HighTable/package.json
+++ b/HighTable/package.json
@@ -16,7 +16,8 @@
     "android-bundle-release": "cd android && ./gradlew bundleRelease --no-daemon",
     "android-bundle-js": "react-native bundle --platform android --dev false --entry-file ./index.js --bundle-output ./android/app/src/main/assets/index.bundle --sourcemap-output ./android/app/src/main/assets/index.map --assets-dest ./android/app/src/main/res/",
     "lint": "eslint . --fix",
-    "prettier": "prettier --write **/*{js,json,ts,tsx}"
+    "prettier": "prettier --write **/*{js,json,ts,tsx}",
+    "android-debug-e2e": "detox build --configuration android.emu.debug"
   },
   "dependencies": {
     "react": "16.11.0",
@@ -31,10 +32,12 @@
     "@types/react-native": "^0.62.5",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^24.9.0",
+    "detox": "^16.4.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-node": "^4.0.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-detox": "^1.0.0",
     "eslint-plugin-import": "~2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
@@ -62,5 +65,26 @@
       "yarn lint",
       "git add ."
     ]
+  },
+  "detox": {
+    "test-runner": "jest",
+    "configurations": {
+      "android.emu.debug": {
+        "binaryPath": "android/app/build/outputs/apk/debug/app-debug.apk",
+        "build": "cd android && ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug && cd ../",
+        "type": "android.emulator",
+        "device": {
+          "avdName": "Nexus_5X_API_26"
+        }
+      },
+      "android.emu.release": {
+        "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
+        "build": "cd android && ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release && cd ../",
+        "type": "android.emulator",
+        "device": {
+          "avdName": "Nexus_5X_API_26"
+        }
+      }
+    }
   }
 }
