--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,37 @@ cache:
 
 stages:
   - test
+  - assembleAndroid
+  - deployAndroid
 
 
 test:
   stage: test
   script:
     - yarn run test
+
+assembleRelease:
+  stage: assembleAndroid
+  only: 
+    refs:
+      - master
+      - staging
+  script:
+    - echo $KEYSTORE_FILE | base64 -d > my.keystore
+    - ./gradlew assembleRelease
+      -Pandroid.injected.signing.store.file=$(pwd)/my.keystore
+      -Pandroid.injected.signing.store.password=$KEYSTORE_PASSWORD
+      -Pandroid.injected.signing.key.alias=$KEY_ALIAS
+      -Pandroid.injected.signing.key.password=$KEY_PASSWORD
+  artifacts:
+    paths:
+      - app/build/outputs/apk/release
+      - CHANGELOG
+
+deployAndroidStaging:
+  stage: deployAndroid
+  only:
+    refs: 
+      - develop
+  scripts:
+    - yarn run android-dropbox-upload
