Added NativeBase and Styled components

--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "dropbox-v2-api": "^2.4.17",
+    "native-base": "^2.13.12",
     "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "redux-connect-decorator": "^0.2.1",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
     "@testing-library/react-native": "^5.0.3",
@@ -36,6 +40,7 @@
     "@types/react-native": "^0.62.5",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^24.9.0",
+    "babel-plugin-transform-decorators": "^6.24.1",
     "detox": "^16.4.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
