--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
+    "android": "npx react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest -u",
+    "test": "jest -u --verbose",
     "clear-watch": "watchman watch-del-all && watchman shutdown-server",
     "ios-bundle-js": "react-native bundle --dev false --entry-file index.ios.js --bundle-output ios/main.jsbundle --platform ios",
     "ios-build": "react-native run-ios --configuration Release",
@@ -23,9 +23,15 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "dropbox-v2-api": "^2.4.17",
+    "lodash": "^4.17.15",
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-animatable": "^1.3.3",
+    "react-native-app-intro-slider": "^4.0.2",
+    "react-native-svg": "^12.1.0",
+    "react-native-swipe-gestures": "^1.0.5",
+    "react-native-swiper": "^1.6.0-rc.3",
     "redux-connect-decorator": "^0.2.1",
     "styled-components": "^5.1.0"
   },
@@ -34,30 +40,40 @@
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
+    "@testing-library/jest-native": "^3.1.0",
     "@testing-library/react-native": "^5.0.3",
     "@types/jest": "^25.2.1",
     "@types/react": "^16.9.34",
     "@types/react-native": "^0.62.5",
+    "@types/react-native-swipe-gestures": "^1.0.4",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/styled-components": "^5.1.0",
+    "@typescript-eslint/parser": "^2.34.0",
     "babel-jest": "^24.9.0",
+    "babel-plugin-root-import": "^6.5.0",
     "babel-plugin-transform-decorators": "^6.24.1",
+    "color": "^3.1.2",
     "detox": "^16.4.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-node": "^4.0.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-detox": "^1.0.0",
-    "eslint-plugin-import": "~2.18.2",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "husky": "^4.2.5",
     "jest": "^24.9.0",
+    "jest-styled-components": "^7.0.2",
     "lint-staged": "^10.2.2",
+    "metro-config": "^0.59.0",
     "metro-react-native-babel-preset": "^0.58.0",
     "prettier": "^2.0.5",
-    "react-test-renderer": "16.11.0",
+    "react-native-svg-transformer": "^0.14.3",
+    "react-test-renderer": "^16.13.1",
     "typescript": "^3.8.3"
   },
   "jest": {
@@ -70,8 +86,8 @@
   },
   "lint-staged": {
     "*.{ts,js,tsx}": [
-      "yarn prettier",
-      "yarn lint",
+      "yarn run prettier",
+      "yarn run lint",
       "git add ."
     ]
   },
