--- a/package.json
+++ b/package.json
@@ -21,19 +21,38 @@
     "android-dropbox-upload": "node dropbox-upload.js"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.5.0",
+    "@types/react-native-loading-spinner-overlay": "^0.5.1",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux-saga": "^0.10.5",
+    "@types/validator": "^13.0.0",
+    "apisauce": "^1.1.1",
     "dotenv": "^8.2.0",
     "dropbox-v2-api": "^2.4.17",
+    "git-branch": "^2.0.1",
     "lodash": "^4.17.15",
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-animatable": "^1.3.3",
     "react-native-app-intro-slider": "^4.0.2",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-loading-spinner-overlay": "^1.1.0",
+    "react-native-modal": "^11.5.6",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.0.2",
+    "react-native-screens": "^2.8.0",
     "react-native-svg": "^12.1.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-swiper": "^1.6.0-rc.3",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "redux-connect-decorator": "^0.2.1",
-    "styled-components": "^5.1.0"
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.1.0",
+    "typesafe-actions": "^5.1.0",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -72,6 +91,7 @@
     "metro-config": "^0.59.0",
     "metro-react-native-babel-preset": "^0.58.0",
     "prettier": "^2.0.5",
+    "react-native-dotenv": "^0.2.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "^16.13.1",
     "typescript": "^3.8.3"
@@ -81,14 +101,13 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged --allow-empty"
+      "pre-commit": "lint-staged "
     }
   },
   "lint-staged": {
     "*.{ts,js,tsx}": [
       "yarn run prettier",
-      "yarn run lint",
-      "git add ."
+      "./node_modules/.bin/eslint . — fix"
     ]
   },
   "detox": {
